--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "@google-cloud/pubsub": "^0.10.0",
+    "async": "^2.3.0",
     "firebase-admin": "~4.1.2",
     "firebase-functions": "^0.5",
     "node-rest-client": "^3.1.0",
